# xarrera

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: main.yaml  pypipublish.yaml  pypipublish.yaml.deactivated
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.ipynb
tests/: test_core.py
xarray_schema/: components.py
xarrera/: __init__.py  _version.py  components.py  dataarray.py  dataset.py
